feat: update to v2.9