@@ -14,7 +14,7 @@ Chạy mô phỏng MATSim và tính toán điểm ngay lập tức:
 
 ```bash
 java --add-opens=java.base/java.nio=ALL-UNNAMED \
-  -jar build/libs/dist-2.0.0.jar sim \
+  -jar build/libs/dist-2.8.0.jar sim \
   --cfg data/config/config.yaml \
   --matsim-cfg data/config/matsim_config.xml \
   --out data/out/final_scores.bin \
@@ -32,12 +32,24 @@ java --add-opens=java.base/java.nio=ALL-UNNAMED \
 *   `--matsim-log`/`--no-matsim-log`: Bật/Tắt logging chi tiết của MATSim (Mặc định: Tắt).
 *   `--signature`: Chữ ký tùy chỉnh cho log (Mặc định: Hostname).
 
-### 2. Chế độ Analysis (`analysis`)
+### 2. Chế độ Chạy Đơn Giản (`simple-run`)
+Chạy mô phỏng MATSim **mà không** có pipeline tính điểm hậu kỳ. Hữu ích để kiểm tra cấu hình MATSim hoặc tạo dữ liệu thô.
+
+```bash
+java --add-opens=java.base/java.nio=ALL-UNNAMED \
+  -jar build/libs/dist-2.8.0.jar simple-run \
+  --matsim-cfg data/config/matsim_config.xml
+```
+
+#### Tham Số
+*   `--matsim-cfg`: Đường dẫn đến file cấu hình MATSim XML (**Bắt buộc**).
+
+### 3. Chế độ Analysis (`analysis`)
 Xử lý file `output_events.xml.gz` đã tồn tại:
 
 ```bash
 java --add-opens=java.base/java.nio=ALL-UNNAMED \
-  -jar build/libs/dist-2.0.0.jar analysis \
+  -jar build/libs/dist-2.8.0.jar analysis \
   --cfg data/config/config.yaml \
   --matsim-cfg data/config/matsim_config.xml \
   --events data/out/output_events.xml.gz \
@@ -54,11 +66,12 @@ java --add-opens=java.base/java.nio=ALL-UNNAMED \
 Pipeline được điều khiển bởi một file cấu hình YAML. 
 
 ### Các Phần Chính
+*   **batch_size**: Số lượng sự kiện cần buffer trước khi ghi xuống đĩa (Tinh chỉnh hiệu năng).
 *   **files -> data**: Định nghĩa đường dẫn input/output. Tự động thêm đuôi file dựa trên `--format` (ví dụ: thêm `.arrow` hoặc `.csv`).
 *   **scoring -> weights**: Điều chỉnh tầm quan trọng tương đối của các chỉ số dịch vụ khác nhau.
 
 ## Logic Tính Điểm
-Điểm tổng hợp toàn hệ thống là tổng có trọng số của **tám** thành phần chính:
+Điểm tổng hợp toàn hệ thống là tổng có trọng số của **mười** thành phần chính:
 
 1.  **Service Coverage (Độ phủ dịch vụ)**: Dựa trên khả năng tiếp cận không gian của phương tiện công cộng.
 2.  **Ridership (Lượng hành khách)**: Tỷ lệ phần trăm tổng dân số sử dụng phương tiện công cộng.
@@ -68,6 +81,8 @@ Pipeline được điều khiển bởi một file cấu hình YAML.
 6.  **Productivity (Năng suất)**: Đo lường mức độ sử dụng tài nguyên, được tính bằng `Tổng giờ phục vụ / Tổng hành khách duy nhất`.
 7.  **Bus Efficiency (Hiệu quả xe buýt)**: Đo lường tính hiệu quả chi phí của mạng lưới (Chi phí trên mỗi Hành khách), được tính bằng `Tổng quãng đường xe buýt / Tổng hành khách duy nhất` (đảo ngược để chuẩn hóa).
 8.  **Bus Effective Travel Distance (Quãng đường di chuyển hiệu quả)**: Tỷ lệ `Tổng quãng đường có khách / Tổng quãng đường` (đảo ngược để chuẩn hóa).
+9.  **Transit Route Ratio (Tỷ lệ tuyến vận tải)**: Tỷ lệ được tính toán trước thể hiện độ phủ không gian hoặc hiệu quả của các tuyến vận tải so với mạng lưới.
+10. **Bus Transfer Rate (Tỷ lệ trung chuyển xe buýt)**: Số lượng trung chuyển xe buýt trung bình trên mỗi chuyến đi bằng phương tiện công cộng, được tính bằng `Tổng số lần trung chuyển / Tổng số chuyến đi PT`.
 
 ## Logging
 Ứng dụng sử dụng Log4j2. Bạn có thể ghi đè mức log khi chạy:
@@ -101,6 +116,6 @@ RUN apt-get update && apt-get install -y wget unzip \
     && wget https://github.com/duckdb/duckdb/releases/download/v1.1.2/duckdb_cli-linux-amd64.zip \
     && unzip duckdb_cli-linux-amd64.zip -d /usr/local/bin
 RUN duckdb -c "INSTALL arrow FROM community; LOAD arrow;"
-COPY build/libs/dist-2.0.0.jar app.jar
+COPY build/libs/dist-2.8.0.jar app.jar
 ENTRYPOINT ["java", "--add-opens=java.base/java.nio=ALL-UNNAMED", "-jar", "app.jar"]
 ```
